k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tcu-ceaa
  labels:
    name: tcu-ceaa
    environment: production
