k8s/07-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tcu-ceaa-ingress
  namespace: tcu-ceaa
  annotations:
    # For AWS ALB
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:REGION:ACCOUNT:certificate/CERTIFICATE_ID"
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS-1-2-2017-01
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    
    # For GCP (comment out AWS annotations above and use these)
    # kubernetes.io/ingress.class: gce
    # kubernetes.io/ingress.global-static-ip-name: tcu-ceaa-ip
    # networking.gke.io/managed-certificates: tcu-ceaa-cert
    
    # For Azure (comment out AWS/GCP annotations and use these)
    # kubernetes.io/ingress.class: azure/application-gateway
    
    # For Nginx Ingress Controller
    # kubernetes.io/ingress.class: nginx
    # cert-manager.io/cluster-issuer: letsencrypt-prod
    # nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: tcu-ceaa.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
  - host: api.tcu-ceaa.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8000
  tls:
  - hosts:
    - tcu-ceaa.com
    - api.tcu-ceaa.com
    secretName: tcu-ceaa-tls
